package com.woonders.lacemsapi.config;

/**
 * Created by emanuele on 29/12/16.
 */
public class Constants {
	public static final String EMPTY_DEFAULT_DB_NAME = "emptydefault";
}
