@startuml

title __CONFIG's Class Diagram__\n

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.AppSecurityConfig {
        + authenticationManagerBean()
        # configure()
        # configure()
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.Constants {
        {static} + EMPTY_DEFAULT_DB_NAME : String
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.LaceMSApiApplication {
        {static} + main()
        # configure()
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.OAuth2ServerConfigJwt {
        {static} - RESOURCE_ID : String
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.AuthorizationServerConfiguration {
        - authenticationManager : AuthenticationManager
        + accessTokenConverter()
        + configure()
        + configure()
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.ResourceServerConfiguration {
        + configure()
        + configure()
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.SwaggerConfig {
        + productApi()
        - metaData()
    }
  }
  

  namespace com.woonders.lacemsapi.config {
    class com.woonders.lacemsapi.config.WebMvcConfiguration {
        + addCustomBigDecimalDeserialization()
        + addFormatters()
        + addInterceptors()
    }
  }
  

  com.woonders.lacemsapi.config.AppSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.woonders.lacemsapi.config.AppSecurityConfig o-- com.woonders.lacemscommon.service.OperatorService : operatorService
  com.woonders.lacemsapi.config.LaceMSApiApplication -up-|> org.springframework.boot.web.support.SpringBootServletInitializer
  com.woonders.lacemsapi.config.OAuth2ServerConfigJwt +-down- com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.AuthorizationServerConfiguration
  com.woonders.lacemsapi.config.OAuth2ServerConfigJwt +-down- com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.ResourceServerConfiguration
  com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.AuthorizationServerConfiguration -up-|> org.springframework.security.oauth2.config.annotation.web.configuration.AuthorizationServerConfigurerAdapter
  com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.AuthorizationServerConfiguration o-- com.woonders.lacemscommon.service.OperatorService : operatorService
  com.woonders.lacemsapi.config.OAuth2ServerConfigJwt.ResourceServerConfiguration -up-|> org.springframework.security.oauth2.config.annotation.web.configuration.ResourceServerConfigurerAdapter
  com.woonders.lacemsapi.config.WebMvcConfiguration -up-|> org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter
  com.woonders.lacemsapi.config.WebMvcConfiguration o-- com.woonders.lacemsapi.interceptor.RequestLogInterceptor : requestLogInterceptor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
